feat(web): migrate latest designer visual and add member selection
